--- a/vimeo-playlist-server/package.json
+++ b/vimeo-playlist-server/package.json
@@ -1,20 +1,20 @@
 {
   "name": "vimeo-playlist-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "lowdb": "^7.0.1",
     "nanoid": "^5.1.5",
     "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
